crates/jsonschema-codegen/tests/ui/invalid_unevaluated_pattern_coverage_regex.stderr
error: Invalid `patternProperties` regular expression: (
 --> tests/ui/invalid_unevaluated_pattern_coverage_regex.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"$schema":"https://json-schema.org/draft/2020-12/schema","unevaluatedProperties":false,"patternProperties":{"(":{}}}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
